[package]
name = "arg"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/arg.rs"
readme = "README.md"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.arg-derive]
version = "0.1"
path = "arg-derive/"
