[package]
name = "arg"
version = "0.3.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/arg.rs"
readme = "README.md"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
description = "Very simple code generator for command line argument parsing."
keywords = [
	"argument",
	"cli",
	"arg",
	"parser",
	"parse"
]
categories = ["command-line-interface"]

[dependencies.arg-derive]
version = "0.3"
path = "arg-derive/"

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
