[package]
name = "arg-derive"
version = "0.2.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/arg.rs"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]
description = "Derive for arg crate"

[lib]
proc-macro = true

[dependencies.syn]
version = "1"
features = ["extra-traits"]

[dependencies]
quote = "1"
tabwriter = "1"
